--- a/ui/style.css
+++ b/ui/style.css
@@ -12,11 +12,15 @@ body {
     font-size: 300%;
 }
 
+.lighter{
+    font-weight: lighter;
+}
+
 .bold {
     font-weight: bold;
 }
 
 .img-medium {
-    height: 200px;
+    height: 300px;
 }
 
