--- a/ui/style.css
+++ b/ui/style.css
@@ -1,3 +1,11 @@
+pa{
+    font-family:Helvetica;
+}
+
+pb{
+    font-family:Arial;
+}
+
 body {
     font-family: sans-serif;
     background-color: lightgrey;
